<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="home_text">首页</string>
    <string name="news">约游</string>
    <string name="reference">查询</string>
    <string name="teamName">队名</string>
    <string name="teamzt">队伍状态</string>
    <string name="allDay">全程</string>
    <string name="startpoint">出发地</string>
    <string name="destination">目的地</string>
    <string name="sex">性别</string>
    <string name="teamerNumber">人数</string>
    <string name="age">年龄</string>
    <string name="city">城市</string>
    <string name="startTime">出发时间</string>
    <string name="arriveTime">到达时间</string>
    <string name="urlLifePicture">上传照片</string>
    <string name="viewPoint">景点</string>
    <string name="intro">约伴介绍</string>
    <string name="mine">我的</string>
    <string name="home">首页</string>
    <string name="picture">旅图</string>
    <string name="chat">消息</string>
    <string name="next">下一步</string>
    <string name="comment">评论</string>
    <string name="join">加入</string>
    <string name="release">发布</string>
    <string name="serch_travel">搜索</string>
    <string name="tv_point"> 目           的            地 </string>
    <string name="tv_goout_date">出发日期</string>
    <string name="tv_arrive_date">到达日期</string>
    <string name="tv_sex">性别</string>
    <string name="tv_all_date">全程天数</string>
    <string name="rd_men">男</string>
    <string name="rd_wommen">女</string>
    <string name="rd_unlimit">不限</string>
     <string name="rd_unlimit_one">不限</string>
    <string name="bt_serch">搜索</string>
    <string name="pinglun_text">评论</string>
    <string name="shengqingjiaru">立即加入</string>
    <string name="tongcheng">同城</string>
    <string name="feitongcheng">非同城</string>
    <string name="fasong">发送</string>
    <string name="duichengyuan">队成员</string>
    <string name="delete">删除</string>
    <string name="huifu">回复</string>
    <string name="shouchang">收藏</string>
    <string name="yueban">约伴详情</string>
    
    <!-- 旅图 -->
    <string name="app_name">travel</string>
    <string name="action_settings">照相机</string>
    <string name="action_search">搜索</string>
    <string name="scenery">景点</string>
    <string name="hot">热门</string>
    <string name="plaza">广场</string>
    <string name="present">当季</string>
    <string name="camera_from_photos">相册</string>
    <string name="camera_from_camera">相机</string>
    <string name="lvxingduixiangqing">旅行队详情</string>
    <string name="lvtufabu">发布</string>
    
 <!-- 消息 -->
    <string name="message_tittle">消息</string>
	<string name="zuijin_message">好友列表</string>
	<string name="chat_adrress">通讯录</string>
	<string name="personal_send">发送</string>
	<string name="message_inf_agree">同意</string>
	<string name="message_inf_refuse">拒绝</string>
    
     <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
	
    <!--自定义标题 -->
    <string name="title_text">Title text</string>
      <string name="edit">Edit</string>
    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>
    
      <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string> 
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    
    
    <!-- 我的 -->
    <string name="string_my_travel">我的旅行队</string>
    <string name="string_join_travel">我加入的旅行队</string>
    <string name="fenxaing">我的分享</string>
    <string name="personaldata">个人资料</string>
</resources>
