<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1" >

    <!-- 标题栏 -->

    <com.gem.home.title.HomeTitle_Activity
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.gem.home.title.HomeTitle_Activity>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tview_startPoint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/startPoint" />

        <EditText
            android:id="@+id/eview_startPoint"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tview_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination" />

        <EditText
            android:id="@+id/eview_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tview_teamNaeme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamName" />

        <EditText
            android:id="@+id/eview_teamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tview_startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTime" />

        <EditText
            android:id="@+id/eview_startTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tview_arriveTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arriveTime" />

        <EditText
            android:id="@+id/eview_arriveTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tview_teamzt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamzt" />

        <EditText
            android:id="@+id/eview_teamzt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tview_allDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allDay" />

        <EditText
            android:id="@+id/eview_allDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tview_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex" />

        <EditText
            android:id="@+id/eview_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tview_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age" />

        <EditText
            android:id="@+id/eview_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <requestFocus />
        </EditText>
    </TableRow>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" >
    </Button>

</TableLayout>