<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#6699CC"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ib_travel_home_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:background="#6699CC"
            android:src="@drawable/back_pressed" />

        <TextView
            android:id="@+id/tv_travel_home_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/serch_travel"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_text_point"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tv_point" />

        <EditText
            android:id="@+id/et_edit_point"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:hint="" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_text_goout_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tv_goout_date" />

        <com.gem.scenery.utils.EditTextWithDate
            android:id="@+id/et_edit_goout"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:text="请点击右边的图标" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_text_arrive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tv_arrive_date" />

        <com.gem.scenery.utils.EditTextWithDate
            android:id="@+id/et_edit_arrive"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:text="请点击右边的图标" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_text_sex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/tv_sex" />

        <RadioGroup
            android:id="@+id/rg_radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_radio_sex_man"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rd_men" />

            <RadioButton
                android:id="@+id/rb_radio_sex_wommen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rd_wommen" />

            <RadioButton
                android:id="@+id/rb_radio_sex_unlimit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rd_unlimit" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_text_alldate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tv_all_date" />

        <EditText
            android:id="@+id/et_edit_alldate"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:inputType="number"
            android:hint="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bt_button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_shape_stype"
            android:text="@string/bt_serch" />
    </LinearLayout>

</LinearLayout>