<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <!-- 最外层布局 -->

    <FrameLayout
        android:id="@+id/tab_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="#FFFFCC" />
<!-- RadioGroup android:background="#FFFFFF"这里是白色，你想什么颜色自己设置 -->
    <RadioGroup
        android:id="@+id/radioGroup_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="7dp"
        android:paddingTop="7dp" >

        <RadioButton
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.98"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/home_logo_unfocus"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/home"
            android:textColor="#000000"
            android:textSize="15sp" />

        <RadioButton
            
            android:id="@+id/picture"
            android:drawableTop="@drawable/collect_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/picture"
            android:textColor="#000000"
            android:textSize="15sp" />

        <RadioButton
             android:drawableTop="@drawable/message_off"
            android:id="@+id/chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/chat"
            android:textColor="#000000"
            android:textSize="15sp" />

        <RadioButton
            android:drawableTop="@drawable/mine_off"
            android:id="@+id/mine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
           
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/mine"
            android:textColor="#000000"
            android:textSize="15sp" />
    </RadioGroup>

</LinearLayout>