<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_msa_tittle"
            style="@style/size"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/message_tittle"
            android:textColor="#000000" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_msa_linear"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linearLayout1"
        android:background="#000000"
       />

    <LinearLayout
        android:id="@+id/lv_msa_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_msa_linear"
        android:orientation="horizontal"
         >

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/zuijin_message" />
	<TextView
        android:id="@+id/tv_msa_linear1"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#000000"
       />
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="#ffffff"
             android:layout_weight="1"
            android:text="@string/chat" />
        
    </LinearLayout>

     <TextView
        android:id="@+id/tv_msa_linear2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/lv_msa_button"
        android:background="#000000"
       />
</RelativeLayout>