<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#6699cc"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/im_back_travel_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dip"
                android:src="@drawable/back_pressed" />

            <TextView
                android:id="@+id/tv_travel_team_my"
                style="@style/size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/message_tittle"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_edit_travel_team"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_string_my_travel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_my_travel"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_string_join_travel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_join_travel"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:id="@+id/im_string_my_travel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:id="@+id/im_string_join_travel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
	 <android.support.v4.view.ViewPager
        android:id="@+id/vp_travel_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.28" >
    </android.support.v4.view.ViewPager>
</LinearLayout>